Fix email signup spacing

--- a/assets/css/emailsignup.css
+++ b/assets/css/emailsignup.css
@@ -21,10 +21,27 @@
 	background-color:rgba(75,75,75,0.7);
 }
 @media screen and ( max-width: 540px) {
+	#emailsignup {
+		color: white;
+		background-image: url("../images/drawing_example.JPG") !important;
+		/*height: default;*/
+
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: cover;
+		/*background-position: right 50% bottom 30%;*/
+		color: white;
+		position:relative;
+
+		margin: 0px;
+		height: 400px;
+	}
 	#emailsignup > .row {
 		padding: 0px;
 	 	/*margin: 0px !important;*/
 	 	margin: 0px;
 		background-color:rgba(75,75,75,0.7);
 	}
+
+	
 }
